Fixed philo alignment in media q

--- a/css/philanthropy.css
+++ b/css/philanthropy.css
@@ -133,6 +133,6 @@ main > img {
         flex-direction: column;
     }
     .info-box{
-    
+        align-self: center;
     }
 }
